add FalseSharingDemo and structure with paddings